# PCA-Reconocedor-Imagenes

./: CMakeLists.txt  MnTP2.py  deflacion.cpp  pruebas1.cpp  pruebas1.py  pruebas2.cpp  pruebas2.py  pruebas3.py  pruebas4.py  pruebas5.py  test.cpp
notas/: notas-informe.xoj  notasMN.xoj  notasTP2.xoj  repasoMet.xoj
output/: prueba  pruebas  pruebas1  pruebas2
